--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "recharts": "^3.6.0",
-    "lucide-react": "^0.562.0",
-    "react-router-dom": "^7.11.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "recharts": "2.12.0",
+    "lucide-react": "0.344.0",
+    "react-router-dom": "6.22.1",
     "@supabase/supabase-js": "2.39.7"
   },
   "devDependencies": {
